# turtlebot_comm_sim

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
launch/: turtlebot_world.py
src/: communicaton_node.py  movement_controller.py
src/turtlebot_comm/: package.xml  setup.cfg  setup.py
src/turtlebot_comm/turtlebot_comm/: communication_node.py  subscriber_node.py  topic_publisher.py
src/turtlebot_comm/worlds/: multi_robot_with_evata.sdf  multi_robot_world_with_namespaces.sdf
turtlebot_comm_sim/src/: multi_robot_comm.py  multi_robot_launch.py
