<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_comm_sim</name>
  <version>0.1.0</version>
  <description>Robotok közötti kommunikációs szimuláció</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
